# parsers-generator

./: CMakeLists.txt  README.md  main.cpp
core/app/: application.cpp  application.h  errors.h
core/code/: code_generator.h  cpp_generator.cpp  cpp_generator.h  filesystem_helper.cpp  filesystem_helper.h
core/generators/: slr_generator.cpp  slr_generator.h
core/grammar/: grammar.cpp  grammar.h  grammar_info.cpp  grammar_info.h
core/grammar_parser/: grammar_parser.cpp  grammar_parser.h
core/grammar_parser/data/: ast_builder.h  grammar.h  identifier.h  tables.h  token_type.h
core/grammar_parser/lib/: ast_node.h  error_printer.cpp  error_printer.h  errors.h  grammar.h  lr_data.h  parser.cpp  parser.h  token.h  tokenizer.cpp  tokenizer.h
core/grammar_parser/usr/: ast_nodes.h  grammar_builder.cpp  grammar_builder.h  lexer.cpp  lexer.h  lexer.re
examples/: balanced_parentheses.lang  grammar.lang
template/: lexer.h  lexer.re  tokenizer.cpp  tokenizer.h
template/cpp/lib/: ast_node.h
template/lib/: grammar.h  lr_data.h  parser.cpp  parser.h  tokenizer.h
template/usr/: lexer.h  lexer.re
templates/cpp/: main.cpp
templates/cpp/lib/: ast_node.h  error_printer.cpp  error_printer.h  errors.h  grammar.h  parser.cpp  token.h  tokenizer.cpp  tokenizer.h
templates/cpp/usr/: lexer.re
utils/: filesystem.cpp  filesystem.h  format_stream.h  input_output.hpp
